# Modelize_System_Using_Python

./: .gitignore  PDES.ipynb  README.md  abstract.md  conda_env.yaml  equation_solving.ipynb  interpolation.ipynb  numpy_op.ipynb  ode.ipynb  optimization.ipynb  presentation.ipynb  presentation.md  sympy.ipynb
interface_c_python/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  matrix.i  readme.md
